[package]
name = "bindgen-ex"
version = "0.1.0"
authors = ["ansible"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
# error: https://github.com/rust-lang/rust/issues/68729
#bindgen = "0.20.0"
bindgen = "0.59.2"

